hphp/hack/test/typecheck/reified_generics/type_constants_self_referential.php.exp
File "type_constants_self_referential.php", line 15, characters 10-17:
Invalid "as" expression hint (Typing[4195])
  File "type_constants_self_referential.php", line 6, characters 19-26:
  The "as" operator cannot be used with the abstract type constant Ta because it is not marked <<__Enforceable>>
File "type_constants_self_referential.php", line 17, characters 10-17:
Invalid "as" expression hint (Typing[4195])
  File "type_constants_self_referential.php", line 12, characters 19-26:
  The "as" operator cannot be used with the abstract type constant Te because it is not marked <<__Enforceable>>
